--- a/source/pesando1.tex
+++ b/source/pesando1.tex
@@ -1,1 +1,33 @@
-Achille e la tartaruga.
+\subsection{1 - Osservatori uniformemente accelerati}
+Considero una particella $P_0$, uniformemente accelerata rispetto al sistema istantaneamente inerziale  $\mathcal{I}$.
+Il sistema $\mathcal{I}$ va inteso come un insieme di sistemi di riferimento inerziali, tra i quali, per ogni tempo, si considera quello rispetto a cui la particella $P_0$ \`e istantaneamente ferma.
+\paragraph{Particella accelerata}
+Considero una generica particella $P$, con velocit\`a $u$ e accelerazione $a$ nel sistema $\mathcal{I}$
+Scrivo il boost a velocit\`a inversa dal sistema in movimento $\mathcal{I}$ al sistema terra $\mathcal{T}$:
+\begin{equation}
+	\begin{cases}
+		\dx_T = \gamma (\dx + v \dt) &  \\
+		\dt_T = \gamma (\dt + v \dt) &  \\ 
+	\end{cases}
+\end{equation}
+\[  u_T = \frac{\dx_T}{\dt_T} = \frac{u+v}{1+uv} \]
+\[ \de u_T = \frac{1-v^2}{(1+uv)^2} \de u \]
+\begin{equation} \label{accel_P}
+	a_T = \frac{\de u_T}{\dt} = \frac{(1-v^2)^{3/2}}{(1+uv)^3} a 
+\end{equation}
+Volendo trovare la velocit\`a della particella $P_0$, utilizzo l'equazione \autoref{accel_P} e la specializzo: la velocit\`a $u$ va posta nulla perch\`e considero la particella $P_0$, ferma in $\mathcal{I}$, e considero l'evoluzione temporale di $v(t_T)$, rispetto al sistema $\mathcal{T}$; la velocit\`a della particella rispetto a $\mathcal{T}$ \`e adesso $v$ e \( a = a_0 \):
+\[ a_T = \frac{\de v(t_T)}{\dt_T} = [1-v^2{t_T}]^{3/2} a_0 \]
+sostituisco v=cos(w) e poi? \todo
+[...]
+\[ v(t_T) = \frac{a_0 t_T}{\sqrt{a+(a_0t_T)^2}} \]
+
+Per trovare la legge oraria, considerando che \(x_T(0)=v_T(0)=0\),
+\[ \int_{x_T(0)}^{x_T(t_T)} \dx_T = \int_0^{t_T} \frac{a_0t_T}{\sqrt{a+(a_0t_T)^2}} \dt_T \]
+Sostituendo prima \( y=a_0t_T \) e poi \( y = \sinh(z) \) si ottiene
+\[ x_T(t_T) = \frac{1}{a_0} \int_{y_0}^y \frac{y}{\sqrt{1+y^2}} \de y \]
+\[ = \frac{1}{a_0} \int_{z_0}^z \sinh(z) \de z \]	
+\[ = \frac{1}{a_0} [\cosh\sinh^{-1}(y) - \cosh\sinh^{-1}(y_0)] \]
+\[ = \frac{1}{a_0} [\cosh(\ln(y + \sqrt{1+y^2}) -1] \]
+\[ = \frac{y^2+y\sqrt{1+y^2}+1-y-\sqrt{1+y^2}}{a_0(y+\sqrt{1+y^2})} \]
+\[ = \frac{\sqrt{1+y^2}-1}{a_0} = \frac{\sqrt{1+(a_0t_T)^2}-1}{a_0} \]
+
