--- a/source/pesando1.tex
+++ b/source/pesando1.tex
@@ -21,7 +21,9 @@ Volendo trovare la velocit\`a della particella $P_0$, utilizzo l'equazione \ref{
 sostituisco $v=\sin(\theta)$
 \[ a_0t_T= \int_0^{\arcsin(v(t_T))} \frac{\de \theta}{\cos^2(\theta)} = \int \de\tan\theta = \tan(\arcsin(v(t_T))) \]
 \[ v(t_T) = \sin(\arctan(a_0t_T)) \]
-\[ v(t_T) = \frac{a_0 t_T}{\sqrt{1+(a_0t_T)^2}} \]
+\begin{equation} \label{veloc}
+		v(t_T) = \frac{a_0 t_T}{\sqrt{1+(a_0t_T)^2}} 
+\end{equation}
 
 Per trovare la legge oraria, considerando che \(x_T(0)=v_T(0)=0\),
 \[ \int_{x_T(0)}^{x_T(t_T)} \dx_T = \int_0^{t_T} \frac{a_0t_T}{\sqrt{a+(a_0t_T)^2}} \dt_T \]
@@ -33,7 +35,7 @@ Sostituendo prima \( y=a_0t_T \) e poi \( y = \sinh(z) \) si ottiene
 \[ = \frac{y^2+y\sqrt{1+y^2}+1-y-\sqrt{1+y^2}}{a_0(y+\sqrt{1+y^2})} \]
 \[ = \frac{\sqrt{1+y^2}-1}{a_0} \]
 \begin{equation} \label{leggeoraria}
-	\frac{\sqrt{1+(a_0t_T)^2}-1}{a_0} 
+	x_T(t_T) = \frac{\sqrt{1+(a_0t_T)^2}-1}{a_0} 
 \end{equation}
 \todo limite di basse velocit\`a
 
@@ -47,7 +49,29 @@ Con \(\de s^2 = -c^2\dt^2 + \dx^2 \):
 Sostituendo \( a_0t = \cosh z \)
 \[ \tau = \int \frac {\de z}{a_0} = \frac{\sinh^{-1}(a_0t_T)}{a_0} = \frac{\ln({\sqrt{1+(a_0t_T)^2}+a_0t_T)}}{a_0}\]
 
-\paragraph {$10^9$ anni-luce}
+\paragraph {$10^9$ anni-luce} \todo udm di c
 Per percorrere una distanza di $10^9 \mathrm{ly}$ con accelerazione da fermo di \(g=9.8m/s^2=1.030ly/y^2\), usando la formula \ref{leggeoraria}, occorrono
 \[ \sqrt{\frac{d}{c}^2 + 2\frac{d}{g}} \simeq 1.942\cdot10^9y \]
 cui corrisponde un tempo proprio \( \tau = 0.142\cdot10^9ly \).
+
+\paragraph {Perche\`e non andiamo su Giove?}
+Con le formule della meccanica classica,
+\[ t_{TOT} = 4\cdot \sqrt{\frac{2x_{TM}}{g}} = 2.8558587119250753 y \]
+In relativit\`a ristretta, dove 'lh' sono le ore-luce,
+\[ t_{TM} = 260.627804384274lh \]
+\[ v_{TM} = 0.9999999999999941 c \]
+Modificando opportunamente la formula \ref{veloc} per velocit\`a iniziale non nulla, si ottiene
+\[ v(t_T) = \frac{a_0 t_T + \tan\arcsin(v_0)          }
+	{\sqrt{1+( a_0t_T + \tan\arcsin(v_0)           )^2 }}  \]
+\[ v(t_T) = \frac{a_0 t_T + \frac{v_0}{\sqrt{1-v_0^2}} }
+	{\sqrt{1+( a_0t_T + \frac{v_0}{\sqrt{1-v_0^2}}  )^2 }}  \]
+E per la legge oraria
+\[ x_T(t_T) = \frac{\sqrt{1+ (-gt_T + \frac{v_0}{\sqrt{1-v_0^2}})^2 } - 
+	\sqrt{1+  (\frac{v_0}{\sqrt{1-v_0^2}})^2}     }{-g} \]
+Invertendo:
+\[ t = \frac{ \frac{v_0}{\sqrt{1-v_0^2}} + \sqrt{ (\frac{v_0}{\sqrt{1-v_0^2}})^2 - 2gx \sqrt{1+( \frac{v_0}{\sqrt{1-v_0^2}}    )^2     }  } }
+             {  g   }\]
+\todo risultati bruttissimi
+
+
+
