--- a/source/pesando1.tex
+++ b/source/pesando1.tex
@@ -54,7 +54,7 @@ Per percorrere una distanza di $10^9 \mathrm{ly}$ con accelerazione da fermo di 
 \[ \sqrt{\frac{d}{c}^2 + 2\frac{d}{g}} \simeq 1.942\cdot10^9y \]
 cui corrisponde un tempo proprio \( \tau = 0.142\cdot10^9ly \).
 
-\paragraph {Perche\`e non andiamo su Giove?}
+\paragraph {Perch\`e non andiamo su Giove?}
 Con le formule della meccanica classica,
 \[ t_{TOT} = 4\cdot \sqrt{\frac{2x_{TM}}{g}} = 2.8558587119250753 y \]
 In relativit\`a ristretta, dove 'lh' sono le ore-luce,
@@ -72,6 +72,57 @@ Invertendo:
 \[ t = \frac{ \frac{v_0}{\sqrt{1-v_0^2}} + \sqrt{ (\frac{v_0}{\sqrt{1-v_0^2}})^2 - 2gx \sqrt{1+( \frac{v_0}{\sqrt{1-v_0^2}}    )^2     }  } }
              {  g   }\]
 \todo risultati bruttissimi
+
+
+
+\paragraph{Razzo relativistico}
+Considero il sistema $\mathcal{I}$ in cui il razzo \`e fermo e i sistemi $\mathcal{E}$, in cui \`e ferma la $\de m$ espulsa, e $\mathcal{J}$, in cui \`e fermo il razzo propulso con massa $m-\de m$. Nel sistema $\mathcal{I}$:
+\[ \de m v_e \gamma(v_e) = (m - \de m) \de v \gamma(\de v) \sim m \de v \]
+\[ \frac{\de m}{m} = \frac{1}{v_e \gamma(v_E)} \frac{\de v}{\de\tau} \de\tau \]
+\[ m = m_0 e^{\frac{\frac{\de v}{\de\tau}}{v_e \gamma(v_e) }} \]
+\[ m = m_0 e^{\frac{a_0\tau}{v_e \gamma(v_e) }} \]
+
+\paragraph{Campo elettrico}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
