primo script per py: errore di dominio

--- a/source/pesando1.tex
+++ b/source/pesando1.tex
@@ -51,8 +51,8 @@ Sostituendo \( a_0t = \cosh z \)
 
 \paragraph {$10^9$ anni-luce} \todo udm di c
 Per percorrere una distanza di $10^9 \mathrm{ly}$ con accelerazione da fermo di \(g=9.8m/s^2=1.030ly/y^2\), usando la formula \ref{leggeoraria}, occorrono
-\[ \sqrt{\frac{d}{c}^2 + 2\frac{d}{g}} \simeq 1.942\cdot10^9y \]
-cui corrisponde un tempo proprio \( \tau = 0.142\cdot10^9ly \).
+\[ \sqrt{\frac{d}{c}^2 + 2\frac{d}{g}} \simeq 2.998\cdot10^18y \]
+cui corrisponde un tempo proprio \( \tau \simeq 41.972 y \).
 
 \paragraph {Perch\`e non andiamo su Giove?}
 Con le formule della meccanica classica,
@@ -72,6 +72,11 @@ Invertendo:
 \[ t = \frac{ \frac{v_0}{\sqrt{1-v_0^2}} + \sqrt{ (\frac{v_0}{\sqrt{1-v_0^2}})^2 - 2gx \sqrt{1+( \frac{v_0}{\sqrt{1-v_0^2}}    )^2     }  } }
              {  g   }\]
 \todo risultati bruttissimi
+
+2.99792458e+18  anni
+tempo proprio:
+41.9715540832882 anni
+
 
 
 
