inizio secondo foglio

--- a/risoluzione.tex
+++ b/risoluzione.tex
@@ -13,6 +13,8 @@
 \newcommand{\dx}[0]{\de x}
 \newcommand{\dt}[0]{\de t}
 \newcommand{\ds}[0]{\de s}
+\newcommand{\dpartial}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\dtotal}[2]{\frac{\de #1}{\de #2}}
 
 
 
@@ -42,6 +44,8 @@
 \section{Foglio 1}
 \input{source/pesando1.tex}
 
+\section{Foglio 2}
+\input{source/pesando2.tex}
 
 
 
