--- a/risoluzione.tex
+++ b/risoluzione.tex
@@ -1,14 +1,17 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
-\everymath{\displaystyle} %better layout
-\usepackage{listings} 
+\everymath{\displaystyle} % better layout
 
-\usepackage{hyperref}
-\usepackage{xcolor}
+\usepackage{hyperref} % hyperlinks 
+\usepackage{xcolor} % colors
+\usepackage{graphicx} % figures
+
+\usepackage[margin=1.3in]{geometry} % smaller margins 
 
 
 
+% some math commands
 \newcommand{\de}[0]{\mathrm{d}}
 \newcommand{\dx}[0]{\de x}
 \newcommand{\dt}[0]{\de t}
@@ -16,22 +19,10 @@
 \newcommand{\dpartial}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\dtotal}[2]{\frac{\de #1}{\de #2}}
 
-
-
-
+% a big "to do" signal
 \newcommand{\todo}[0]{\colorbox{yellow}{\textcolor{red}{TODO}}}
 
-\lstset{language=TeX,
-				basicstyle=\small\ttfamily,	
-				frame=l}
 
-\usepackage{makeidx}
-
-
-
-
-%\newcommand{\code}[1]{\texttt {#1}}
-%\newcommand{\bsl}{\textbackslash}
 
 \setcounter{tocdepth}{4}
 
