--- a/risoluzione.tex
+++ b/risoluzione.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref} % hyperlinks 
 \usepackage{xcolor} % colors
 \usepackage{graphicx} % figures
+\usepackage{caption} % \caption* command in figures
 
 \usepackage[margin=1.3in]{geometry} % smaller margins 
 
@@ -40,6 +41,9 @@
 
 \section{Foglio 3}
 \input{source/pesando3.tex}
+
+\section{Foglio 4}
+\input{source/pesando4.tex}
 
 
 
