--- a/risoluzione.tex
+++ b/risoluzione.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath}
+\usepackage{amsmath, latexsym}
 \everymath{\displaystyle} % better layout
 
 \usepackage{hyperref} % hyperlinks 
@@ -44,6 +44,9 @@
 
 \section{Foglio 4}
 \input{source/pesando4.tex}
+
+\section{Foglio 5}
+\input{source/pesando5.tex}
 
 
 
